k-3/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
    kalle: nisse
  name: web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - image: kubedemo:mini
        name: kubedemo
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
