k-3/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: web-lb
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
