k-3/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: mytest.localhost.direct
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-lb
            port:
              number: 80
